Changes in version 0.1.2

o autoConverge: significantly improved interface

o separated all function files into individual files

o semnetcleaner: added argument to input participants by row or column; ids now included for output; added output to show what spellcheck changed

o destr: improved functionality to allow selection of separating variable


Changes in version 0.1.1

o cosine: added cosine similarity

o semnetboot: changed name to partboot and added the cosine similarity

o semnetmeas: moved from NetworkToolbox

o plot.partboot: a function that generates "raindrop" plots for bootstrapped data

o org.plot: an organization function for plot.partboot (not for individual use)

o convert2cytoscape: added a function to convert a network matrix into a sparse matrix for Cytoscape visualization

o added new examples with corresponding data files


Changes in version 0.1.0

o autoConverge: created an automated converge function to eliminate the manual converge process

o autoDeStr: created an automated de-string function to eliminate most manual de-stringing

o fine-tuned most functions

o semnetboot: moved from package NetworkToolbox