@@ -2,6 +2,7 @@
 
 export(autoConverge)
 export(autoDestr)
+export(bin2resp)
 export(converge)
 export(convert2cytoscape)
 export(cosine)
@@ -12,6 +13,7 @@ export(org.plot)
 export(partboot)
 export(partboot.plot)
 export(partboot.test)
+export(randwalk)
 export(semnetcleaner)
 export(semnetmeas)
 import(dplyr)
@@ -24,6 +26,7 @@ importFrom(stats,qnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(utils,menu)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
